# Aoba

./: .gitignore  Aoba.sln  Cargo.toml  Dockerfile  build.gradle  docker-compose.yml  settings.gradle
Aoba/: Aoba.csproj  Dockerfile  Program.cs  WeatherForecast.cs
Aoba/Controllers/: WeatherForecastController.cs
Aoba/Database/: AppDbContext.cs
Aoba/Database/Configurations/: FileConfiguration.cs  FileDataConfiguration.cs  UserConfigurations.cs
Aoba/Database/Models/: FileData.cs  FileMetadata.cs  User.cs
Aoba/Migrations/: 20221223175727_foda.Designer.cs  20221223175727_foda.cs  AppDbContextModelSnapshot.cs
Aoba/Properties/: launchSettings.json
migrations/: 20221013215736_initial.sql  20221015112429_initial.sql
src/: auth.rs  config.rs  configs.rs  extractors.rs  jwt.rs  macros.rs  main.rs
src/controllers/: auth.rs  images.rs  mod.rs  users.rs
src/database/: images.rs  mod.rs  users.rs
src/main/java/com/zuraaa/aoba/: AobaApplication.java  Configs.java
src/main/java/com/zuraaa/aoba/auth/: JwtToken.java  JwtTokenFilter.java  SecurityConfig.java
src/main/java/com/zuraaa/aoba/controllers/: FilesController.java  FoldersController.java  UsersController.java
src/main/java/com/zuraaa/aoba/models/: File.java  FileData.java  FileMetadata.java  Folder.java  FolderDto.java  User.java
src/main/java/com/zuraaa/aoba/repos/: FilesDataRepository.java  FilesMetadataRepository.java  FilesRepository.java  FoldersRepository.java  UsersRepository.java
src/main/resources/: application.properties
src/test/java/com/zuraaa/aoba/: AobaApplicationTests.java
(+4 files in other folders)
