[package]
name = "aoba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
figment = { version = "0.10.8", features = ["env"] }
sqlx = { version = "0.6.2", features = ["mysql", "runtime-actix-rustls", "migrate"] }
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
cuid = "1.2.0"
bcrypt = "0.13.0"
validator = { version = "0.16.0", features = ["derive"] }
serde_json = "1.0.86"
jsonwebtoken = "8.1.1"
futures = "0.3.24"
base64 = "0.13.0"
actix-cors = "0.6.3"
